--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <header class="brand-header">
     <div class="max-w-6xl mx-auto px-5 py-6 flex flex-col lg:flex-row lg:items-center lg:justify-between gap-4">
       <div class="flex items-center gap-3">
-        <img referrerpolicy="no-referrer" src="https://postfiles.pstatic.net/MjAyNTA5MjlfMTYy/MDAxNzU5MTA0NjA3OTUz.d6U-5b94oXanvaYT7my1fkSTRB-bO93yWI1aZeeXwkgg._Byt-AvsYGX-PJBebfb0Nweiu1RPDLle3ZxStLF3gucg.PNG/%EA%B7%B8%EB%A6%BC2.png?type=w966" alt="거북식당 로고" class="h-16 w-auto object-contain" onerror="this.style.display='none';" />
+        <img referrerpolicy="no-referrer" src="https://github.com/qkr3069-beep/gubukrestaurant/blob/main/%EA%B7%B8%EB%A6%BC2.png?raw=true" alt="거북식당 로고" class="h-16 w-auto object-contain" onerror="this.style.display='none';" />
       </div>
       <nav class="flex gap-2">
         <a href="#menu" class="nav-link">식단</a>
@@ -408,4 +408,5 @@
   </script>
 </body>
 </html>
+
 
