--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <main class="max-w-6xl mx-auto px-5 py-6 space-y-10">
     <!-- Ad banner -->
     <a class="ad-banner block" id="adLink" href="https://omnicare.biz/service/service.php" target="_blank" rel="noopener">
-      <img referrerpolicy="no-referrer" src="https://postfiles.pstatic.net/MjAyNTEwMDFfNTgg/MDAxNzU5MjgzNTYwMDk5.iBDJbmTncpM4Nt8NSWEPyrQiLm_K4oEBKcLZokDGtBgg.by-Zz4CApW4nTXfstaSco3IxIefaCJedSt757zk02Qkg.JPEG/%EC%8A%A4%ED%82%A8_2.jpg?type=w966" alt="광고 배너">
+      <img referrerpolicy="no-referrer" src="https://github.com/qkr3069-beep/gubukrestaurant/blob/main/%EC%8A%A4%ED%82%A8_2.jpg?raw=true" alt="광고 배너">
     </a>
 
     <!-- Menu -->
@@ -408,5 +408,6 @@
   </script>
 </body>
 </html>
+
 
 
