--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <main class="max-w-6xl mx-auto px-5 py-6 space-y-10">
     <a class="ad-banner block" id="adLink" href="https://omnicare.biz/service/service.php" target="_blank" rel="noopener">
-      <img referrerpolicy="no-referrer" src="https://github.com/qkr3069-beep/gubukrestaurant/blob/main/%EC%8A%A4%ED%82%A8_2.jpg?raw=true" alt="광고 배너">
+      <img referrerpolicy="no-referrer" src="https://github.com/qkr3069-beep/gubukrestaurant/blob/main/%EA%B4%91%EA%B3%A0%20%EC%83%98%ED%94%8C3.png?raw=true" alt="광고 배너">
     </a>
 
     <section id="menu" class="space-y-4">
@@ -398,6 +398,7 @@
   </script>
 </body>
 </html>
+
 
 
 
