--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </header>
 
   <main class="max-w-6xl mx-auto px-5 py-6 space-y-10">
-    <a class="ad-banner block" id="adLink" href="www.naver.com" target="_blank" rel="noopener">
+    <a class="ad-banner block" id="adLink" href="https://www.naver.com/" target="_blank" rel="noopener">
       <img referrerpolicy="no-referrer" src="https://github.com/qkr3069-beep/gubukrestaurant/blob/main/%EA%B4%91%EA%B3%A0%20%EC%83%98%ED%94%8C3.png?raw=true" alt="광고 배너">
     </a>
 
@@ -405,4 +405,5 @@
   </script>
 </body>
 </html>
+
 
